[package]
name = "trust"
version = "0.1.0"
authors = ["Zelalem Mekonen <zola@programmer.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frank_jwt = "3.1.1"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
diesel = { version = "1.4.2", features = ["postgres", "chrono", "serde_json", "r2d2"] }
dotenv = "0.14.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
envy = "0.4"
clap = { version = "2.33.0", features = ["yaml"]}
chrono = "0.4.9"
bcrypt = "0.4"