[package]
name = "trust"
version = "0.1.0"
authors = ["Zelalem Mekonen <zola@programmer.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trust"
path = "src/lib.rs"

[dependencies]
frank_jwt = "3.1.2"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
diesel = { version = "1.4.3", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
clap = { version = "2.33.0", features = ["yaml"] }
chrono = { verison = "0.4.9", features = ["serde"] }
bcrypt = "0.4"
handlebars = "2.0.2"
rand = "0.7.2"
lettre = "0.9.2"
lettre_email = "0.9.2"
simple_logger = "1.3.0"
log = "0.4.8"
native-tls = "0.2.3"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
oauth2 = "3.0.0-alpha.4"
url = "2.1.0"
serde_regex = "0.4.0"
regex = "1.3.3"
juniper = "0.14.2"
juniper_rocket = "0.5.2"
http = "0.2.1"
hocon = "0.3.5"
woothee = "0.11.0"

[dev-dependencies]
testcontainers = "0.9.1"
